--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 	</header>
 
 	<main>
+		<div style="background-color:rgb(253, 253, 136);padding:10px">
+			<h1>Note:</h1>
+			<p>This website doesn't work because the Numbers API uses http rather than https, and because of CORS the request can't be sent.</p>
+		</div>
+		
 		<h2>Today's Number</h2>
 		<p id="number">not yet</p>
 
